<resources>
    <string name="google_maps_key">xxxxxxxxxxxxxxxxxxxx</string>
    <string name="app_name">Guide Me</string>
    <string name="travel">Search service</string>
    <string name="admin">Admin</string>
    <string name="welcome_to">Welcome to</string>
    <string name="travel_guide_mobile_application">Travel guide mobile application</string>
    <string name="interest">Your interest</string>
    <string name="continue_txt">Continue</string>
    <string name="roboto">sans-serif-thin</string>
    <string name="category">Category</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="provide_all_information">Please provide Correct information</string>
    <string name="company">Company</string>
    <string name="logout">Logout</string>
    <string name="category_name">Category name</string>
    <string name="add_category">Add Category</string>
    <string name="canceled">CANCELED</string>
    <string name="failed_to_get_location">Failed to retrieve your current location</string>
    <string name="search">Search</string>
    <string name="register">Register</string>
    <string name="collect_email">Enter a collect E-mail</string>
    <string name="password_is_short">Your password is too short, at least 6 characters</string>
    <string name="credentials_not_collect">Provided credential are not correct</string>
    <string name="no">No</string>
    <string name="logout_before_exit">Logout before you exit the application.</string>
    <string name="category_added">Category added successfully</string>
    <string name="no_category">No category</string>
    <string name="no_registered_company">No registered company</string>
    <string name="location">Location:</string>
    <string name="register_company">Register Company</string>
    <string name="failed_to_get_data">Failed to connect with server</string>
    <string name="company_name">Company name</string>
    <string name="contact">Contact</string>
    <string name="describe_services_provided">Describe services provided</string>
    <string name="address">Address</string>
    <string name="street_name">Street name:</string>
    <string name="coordinates">Coordinates:</string>
    <string name="lat_long">%1$s , %2$s</string>
    <string name="company_registered">Company registered successfully</string>
    <string name="position">Position</string>
    <string name="name">Name</string>
    <string name="add_new_admin_user">Register new user</string>
    <string name="user_registered">User registered successfully</string>
    <string name="image_inserted">Image inserted successfully</string>
    <string name="tel_number">Tel. Number</string>
    <string name="make_order">Make order</string>
    <string name="order_text">Thank you for making an order using GuideMe application, we will get back to you as fast as we can.</string>
    <string name="description">Description of your order</string>
    <string name="making_order">Provide brief information below to make an order. We will reply you as fast as we can.</string>
    <string name="telephone_is_short">Telephone is not short at least 9 digits</string>
    <string name="view_orders">View orders</string>
    <string name="orders">Orders</string>
    <string name="share">Share</string>
    <string name="order">Order</string>
    <string name="names">Names</string>
    <string name="enter_message">Enter message</string>
    <string name="send_message">Send message</string>
    <string name="compose_message_to_notify_client">Compose message to notify client</string>
    <string name="mention_price">Mention price</string>
    <string name="prices">Prices</string>
    <string name="no_orders_made">No orders made</string>
    <string name="deleting_category">Do you wand to delete this category?</string>
    <string name="desc">Description</string>
</resources>
