<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/big_padding">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/ic_login" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_size"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:background="@drawable/edit_text_round"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/big_padding" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_size"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:background="@drawable/edit_text_round"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/big_padding" />

    <Button
        android:id="@+id/btn_login"
        style="?attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginTop="@dimen/big_padding"
        android:background="@color/colorPrimary"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/white_color" />
</LinearLayout>