<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/big_padding"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/category_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/ic_camera"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/big_padding"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/category_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_size"
        android:background="@drawable/edit_text_round"
        android:hint="@string/category_name"
        android:inputType="textCapWords"
        android:padding="@dimen/big_padding" />

    <Button
        android:id="@+id/add_category"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginTop="@dimen/extra_padding"
        android:background="@color/colorPrimary"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/add_category"
        android:textAllCaps="true"
        android:textColor="@color/white_color" />
</LinearLayout>